--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.19.6",
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.19.0",
+    "@testing-library/dom": "^8.19.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.27",
+    "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.1",
     "antd": "^4.23.0",
+    "prop-types": "^15.0.0",
     "rctx-contextmenu": "^1.3.7",
     "react": "^18.0.0",
     "react-contextmenu": "^2.14.0",
